--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        database: [COSTUMERIE_CAEN]
+        database: [COSTUMERIE_CAEN_NEON]
 
     steps:
       - name: Install dependencies
@@ -48,7 +48,7 @@ jobs:
           echo "DB_NAME=$DB_NAME" >> $GITHUB_ENV
           echo "FLASK_URL_BASE=$SERVER_INPUT" >> $GITHUB_ENV
 
-          if [ "$DB_NAME" = "COSTUMERIE_CAEN" ]; then
+          if [ "$DB_NAME" = "COSTUMERIE_CAEN"* ]; then
             echo "USER_EMAIL=${{ secrets.COSTUMERIE_CAEN_USER_EMAIL }}" >> $GITHUB_ENV
             echo "USER_PASSWORD=${{ secrets.COSTUMERIE_CAEN_USER_PASSWORD }}" >> $GITHUB_ENV
             echo "::add-mask::$USER_PASSWORD"  # masque le mot de passe dans les logs
