--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        database: [COSTUMERIE_CAEN_NEON]
+        database: [COSTUMERIE_CAEN_NEON, COSTUMERIE_ALEX_NEON]
 
     steps:
       - name: Install dependencies
@@ -51,6 +51,10 @@ jobs:
           if [[ "$DB_NAME" == COSTUMERIE_CAEN* ]]; then
             echo "USER_EMAIL=${{ secrets.COSTUMERIE_CAEN_USER_EMAIL }}" >> $GITHUB_ENV
             echo "USER_PASSWORD=${{ secrets.COSTUMERIE_CAEN_USER_PASSWORD }}" >> $GITHUB_ENV
+            echo "USER_PASSWORD is set? [$( [ -n "$USER_PASSWORD" ] && echo yes || echo no )]"
+          elseif [[ "$DB_NAME" == COSTUMERIE_ALEX* ]]; then
+            echo "USER_EMAIL=${{ secrets.COSTUMERIE_ALEX_USER_EMAIL }}" >> $GITHUB_ENV
+            echo "USER_PASSWORD=${{ secrets.COSTUMERIE_ALEX_USER_PASSWORD }}" >> $GITHUB_ENV
             echo "USER_PASSWORD is set? [$( [ -n "$USER_PASSWORD" ] && echo yes || echo no )]"
           fi
 
